Update from Forestry.io Marketing VideoTranslator updated content/free-trial.md q6a/q6a.source@b2b1e9f853996f500646b4f4e275ea4204630792

--- a/free-trial/index.html
+++ b/free-trial/index.html
@@ -8,7 +8,7 @@
 <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','UA-115780836-2')</script>
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-115780836-2"></script>
 <meta name=author content="Video Translator">
-<meta name=description content="AI Transcription And Translation
+<meta name=description content="Free Trial
     ">
 <meta name=keywords content="video translation,video translator,caption maker,closed captioning software,open captioning software,add captions to video,video captions,subtitle maker,subtitles for video,embed subtitles in video,subtitles video,ai transcription,ai translation,ai dubbing,ai reader,">
 <meta property="og:locale" content="/">
