--- a/free-trial/index.html
+++ b/free-trial/index.html
@@ -3,7 +3,7 @@
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="ie=edge">
 <meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1">
-<title>AI Transcription and Translation | Real Time AI Transcription, Translation And Dubbing For Video</title>
+<title>Free Trial | Real Time AI Transcription, Translation And Dubbing For Video</title>
 <script type=application/javascript>var doNotTrack=!1;doNotTrack||(function(a,e,f,g,b,c,d){a.GoogleAnalyticsObject=b,a[b]=a[b]||function(){(a[b].q=a[b].q||[]).push(arguments)},a[b].l=1*new Date,c=e.createElement(f),d=e.getElementsByTagName(f)[0],c.async=1,c.src=g,d.parentNode.insertBefore(c,d)}(window,document,'script','https://www.google-analytics.com/analytics.js','ga'),ga('create','UA-115780836-2','auto'),ga('send','pageview'))</script>
 <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date),gtag('config','UA-115780836-2')</script>
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-115780836-2"></script>
@@ -14,7 +14,7 @@
 <meta property="og:locale" content="/">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://videotranslator.ai/free-trial/">
-<meta property="og:title" content="AI Transcription and Translation">
+<meta property="og:title" content="Free Trial">
 <meta property="og:description" content="Video Translator provides a real time AI transcription, translation and dubbing. Transform your text, image, audio and video content with support for 150+ dialects and 60+ languages. Pricing starts at 15 cents/minute.">
 <meta name=google-site-verification content="-ozRDqxaZMyDmWgsUgzwt8ZSvMgkTGdh67APtY3JQ6c">
 <meta name=msvalidate.01 content="2785662A27A405B2FC9A3EFC34FFADD5">
